--- a/inmigrayuda/templates/index.html
+++ b/inmigrayuda/templates/index.html
@@ -30,9 +30,9 @@
 
     <div id="navbar" class="sticky-top">
         <a class="nav-link active" id="btnInicio" href="#">Inicio</a>
-        <a class="nav-link" id="btnPreguntasfre" href="PreguntasFrecuentes.html">Preguntas Frecuentes</a>
-        <a class="nav-link" id="btnQuienesSomos" href="quienesSomos.html">¿Quienes somos?</a>
-        <a class="nav-link" id="btnContacto" href="contacto.html">Contacto</a>
+        <a class="nav-link" id="btnPreguntasfre" href="/preguntasFrecuentes">Preguntas Frecuentes</a>
+        <a class="nav-link" id="btnQuienesSomos" href="/quienesSomos">¿Quienes somos?</a>
+        <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
 
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
