--- a/inmigrayuda/templates/PreguntasFrecuentes.html
+++ b/inmigrayuda/templates/PreguntasFrecuentes.html
@@ -1,3 +1,4 @@
+{% load static %} 
 <!DOCTYPE html>
 <html lang="es-CL">
 
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="shortcut icon" href="img/logo/logoInmiigrantes.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilo.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <title>Inmigrayuda</title>
 </head>
 
@@ -27,10 +28,10 @@
     </div>
 
     <div id="navbar" class="sticky-top">
-        <a class="nav-link" id="btnInicio" href="index.html">Inicio</a>
-        <a class="nav-link active" id="btnPreguntasfre" href="#">Preguntas Frecuentes</a>
-        <a class="nav-link" id="btnQuienesSomos" href="quienesSomos.html">¿Quienes somos?</a>
-        <a class="nav-link" id="btnContacto" href="contacto.html">Contacto</a>
+        <a class="nav-link active" id="btnInicio" href="../">Inicio</a>
+        <a class="nav-link" id="btnPreguntasfre" href="#">Preguntas Frecuentes</a>
+        <a class="nav-link" id="btnQuienesSomos" href="/quienesSomos">¿Quienes somos?</a>
+        <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
     </div>
 
 
