--- a/inmigrayuda/templates/noticias.html
+++ b/inmigrayuda/templates/noticias.html
@@ -1,3 +1,4 @@
+{% load static %} 
 <!DOCTYPE html>
 <html lang="es-CL">
 
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="shortcut icon" href="img/logo/logoInmiigrantes.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilo.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <title>Inmigrayuda</title>
 </head>
 
