--- a/inmigrayuda/templates/contacto.html
+++ b/inmigrayuda/templates/contacto.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="shortcut icon" href="img/logo/logoInmiigrantes.png" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+        <link rel="shortcut icon" href="{% static 'img/logo/logoInmiigrantes.png' %}"  type="image/x-icon">
+        <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <title>Inmigrayuda</title>
 </head>
 
@@ -17,11 +17,10 @@
 
 
     <div class="header">
-        <img src="img/blur/inmigrantes.jpg" class="blurr" alt="">
-
+        <img src="{% static 'img/blur/inmigrantes.jpg' %}" class="blurr" alt="">
         <div class="bg-text">
-            <img src="img/logo/logoInmiigrantes.png" width="130px" alt="">
-
+            <img src="{% static 'img/logo/logoInmiigrantes.png' %}" width="130px" alt="">
+            
             <h1>Inmigrayuda</h1>
             <p>"Al servicio de las personas"</p>
         </div>
@@ -29,10 +28,12 @@
     </div>
 
     <div id="navbar" class="sticky-top">
-        <a class="nav-link active" id="btnInicio" href="../">Inicio</a>
+        <a class="nav-link" id="btnInicio" href="../">Inicio</a>
         <a class="nav-link" id="btnPreguntasfre" href="/preguntasFrecuentes">Preguntas Frecuentes</a>
         <a class="nav-link" id="btnQuienesSomos" href="/quienesSomos">¿Quienes somos?</a>
-        <a class="nav-link" id="btnContacto" href="#">Contacto</a>
+        <a class="nav-link active" id="btnContacto" href="#">Contacto</a>
+        <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
+
     </div>
 
     <div class="container-fluid">
@@ -70,13 +71,13 @@
                 <br> <br>
                 <h6 style="margin-top: 10px"> Otras formas de contactarse con nosotros: </h6>
                 <br>
-                <img src="img/contacto/logo_celular.png" width="25px" alt="logo_celular"> + 569 1234 5678
+                <img src="{% static 'img/contacto/logo_celular.png' %}" width="25px" alt="logo_celular"> + 569 1234 5678
+                <br> 
+                <br>
+                <img src="{% static 'img/contacto/logo_celular.png' %}" width="25px" alt="logo_celular"> + 569 8765 4321
                 <br>
                 <br>
-                <img src="img/contacto/logo_celular.png" width="25px" alt="logo_celular"> + 569 8765 4321
-                <br>
-                <br>
-                <img src="img/contacto/email.png" width="40px" alt="email"> inmigrayuda@gmailcom
+                <img src="{% static 'img/contacto/email.png' %}" width="40px" alt="email"> inmigrayuda@gmailcom
             </div>
         </div>
 
@@ -99,13 +100,12 @@
 
     </footer>
 
-
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+        <script src="{% static 'js/app' %}"></script>
 </body>
 
 </html>
