--- a/inmigrayuda/templates/index.html
+++ b/inmigrayuda/templates/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="shortcut icon" href="img/logo/logoInmiigrantes.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'img/logo/logoInmiigrantes.png' %}"  type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
         <title>Inmigrayuda</title>
 </head>
@@ -17,11 +17,10 @@
 
 
     <div class="header">
-        <img src="img/blur/inmigrantes.jpg" class="blurr" alt="">
-
+        <img src="{% static 'img/blur/inmigrantes.jpg' %}" class="blurr" alt="">
         <div class="bg-text">
-            <img src="img/logo/logoInmiigrantes.png" width="130px" alt="">
-
+            <img src="{% static 'img/logo/logoInmiigrantes.png' %}" width="130px" alt="">
+            
             <h1>Inmigrayuda</h1>
             <p>"Al servicio de las personas"</p>
         </div>
@@ -33,16 +32,8 @@
         <a class="nav-link" id="btnPreguntasfre" href="/preguntasFrecuentes">Preguntas Frecuentes</a>
         <a class="nav-link" id="btnQuienesSomos" href="/quienesSomos">¿Quienes somos?</a>
         <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
+        <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
 
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
-            Categorias
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-        </div>
     </div>
 
 
@@ -54,7 +45,7 @@
                 <h2>Resumen General</h2>
                 <br>
 
-                <a href="noticias.html">
+                <a href="/noticias">
                     <button class="estilo noticias"> Noticias </button>
                 </a>
 
@@ -82,11 +73,11 @@
                     <div class="container-fluid">
                         <hr>
                         <h6> Siguenos </h6>
-                        <a class="link" href="https://www.facebook.com/profile.php?id=100029092758317" target="_blank">
-                            <img src="img/contacto/logo_facebook.png" width="40px" alt="logo_facebook"> InmigrAyuda Corp</a>
+                        <a class="link"  href="https://www.facebook.com/profile.php?id=100029092758317" target="_blank">
+                            <img src="{% static 'img/contacto/logo_facebook.png' %}" width="40px" alt="logo_facebook"> InmigrAyuda Corp</a>
                         <hr>
                         <a class="link" href="https://www.instagram.com/?hl=es-la" target="_blank">
-                            <img src="img/contacto/logo_instagram.jpg" width="41px" alt="logo_instagram"> Inmigrayuda oficial</a>
+                            <img src="{% static 'img/contacto/logo_instagram.jpg' %}" width="41px" alt="logo_instagram"> Inmigrayuda oficial</a>
                         <hr>
                     </div>
 
@@ -111,13 +102,12 @@
 
 
 
-
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
-</body>
+        <script src="{% static 'js/app' %}"></script>
+    </body>
 
 </html>
