--- a/inmigrayuda/static/css/estilo.css
+++ b/inmigrayuda/static/css/estilo.css
@@ -146,6 +146,23 @@
     width: 457px;
   }
 
+  .nav-pills .nav-link{
+    border-radius: 0px;
+    color: white;
+    background-color: #333;
+  }
+
+  .nav-pills .nav-link.disabled{
+    border-radius: 0px;
+    background-color: rgb(44, 52, 63);
+  }
+
+  .nav-pills .nav-link.active{
+    border-radius: 0px;
+    background-color: rgb(0, 77, 87);
+  }
+
+
 
   
   #navbar a:hover {
