--- a/inmigrayuda/templates/categorias.html
+++ b/inmigrayuda/templates/categorias.html
@@ -38,28 +38,117 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
+            <div class="col-2">
+                <br>
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                        
+                        <a class="nav-link disabled" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+                        aria-selected="true"> Categorias  <img src="{% static 'img/diseño/flecha_abajo.png' %}" width="15px" alt="flecha_abajo"> </a>
                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
                         aria-selected="true">Ministerios</a>
-                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+                    <a class="nav-link menuCategoria" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
                         aria-selected="false">Salud</a>
-                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+                    <a class="nav-link menuCategoria" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
                         aria-selected="false">Comunidades</a>
-                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+                    <a class="nav-link menuCategoria" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
                         aria-selected="false">Casas</a>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-10">
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                        <br>
                         <h4>Ministerios</h4>
 
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        
+                            <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio del interior y seguridad publica </button>
+                                </a>
+
+                                <a href="http://www.msgg.gob.cl/wp/" target="_blank">
+                                    <button class="estilo dos"> ministerio secretaria general del gob </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de economia, fomento y turismo </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de justicia y derechos humanos </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de salud </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de mineria </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de energia </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de relaciones exteriores </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de hacienda </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de desarrollo social </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de trabajo y prevision social </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de vivienda y urbanismo </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de transporte y telecomunicaciones </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio del medio ambiente </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de las culturas, las artes y el patrimonio </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de defensa nacional </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de secretaria general de la presidencia  </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de educacion </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de obras publicas </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de agricultura </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio de bienes nacionales </button>
+                                </a>
+
+                                <a href="https://www.interior.gob.cl/" target="_blank">
+                                    <button class="estilo dos"> ministerio del deporte </button>
+                                </a>
+                        
                     </div>
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                         <h4>no se</h4>
