--- a/inmigrayuda/templates/index.html
+++ b/inmigrayuda/templates/index.html
@@ -94,7 +94,7 @@
 
         <div class="footer footer-copyright text-center py-3 ">
             <h6> © 2018 Copyright:
-                <a href="index.html"> Inmigrayuda.cl </a>
+                <a href="../"> Inmigrayuda.cl </a>
             </h6>
         </div>
 
