--- a/inmigrayuda/templates/noticias.html
+++ b/inmigrayuda/templates/noticias.html
@@ -28,10 +28,10 @@
     </div>
 
     <div id="navbar" class="sticky-top">
-        <a class="nav-link" id="btnInicio" href="index.html">Inicio</a>
-        <a class="nav-link" id="btnPreguntasfre" href="PreguntasFrecuentes.html">Preguntas Frecuentes</a>
-        <a class="nav-link" id="btnQuienesSomos" href="quienesSomos.html">¿Quienes somos?</a>
-        <a class="nav-link" id="btnContacto" href="contacto.html">Contacto</a>
+        <a class="nav-link" id="btnInicio" href="../">Inicio</a>
+        <a class="nav-link" id="btnPreguntasfre" href="/preguntasFrecuentes">Preguntas Frecuentes</a>
+        <a class="nav-link" id="btnQuienesSomos" href="/quienesSomos">¿Quienes somos?</a>
+        <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
         <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
 
     </div>
@@ -142,8 +142,8 @@
 
         <div class="footer footer-copyright text-center py-3 ">
             <h6> © 2018 Copyright:
-                <a href="index.html"> Inmigrayuda.cl </a>
-            </h6>
+                    <a href="../"> Inmigrayuda.cl </a>
+                </h6>
         </div>
 
     </footer>
