--- a/inmigrayuda/templates/quienesSomos.html
+++ b/inmigrayuda/templates/quienesSomos.html
@@ -63,7 +63,9 @@
     <footer class="page-footer font-small blue ">
 
         <div class="footer footer-copyright text-center py-3 ">
-            <h6> © 2018 Copyright: <a href="index.html"> Inmigrayuda.cl </a> </h6>
+            <h6> © 2018 Copyright: 
+                    <a href="../"> Inmigrayuda.cl </a>
+                </h6>
         </div>
 
     </footer>
