--- a/inmigrayuda/templates/contacto.html
+++ b/inmigrayuda/templates/contacto.html
@@ -94,8 +94,8 @@
 
         <div class="footer footer-copyright text-center py-3 ">
             <h6> © 2018 Copyright:
-                <a href="index.html"> Inmigrayuda.cl </a>
-            </h6>
+                    <a href="../"> Inmigrayuda.cl </a>
+                </h6>
         </div>
 
     </footer>
