--- a/inmigrayuda/templates/noticias.html
+++ b/inmigrayuda/templates/noticias.html
@@ -1,4 +1,4 @@
-{% load static %} 
+{% load static %}
 <!DOCTYPE html>
 <html lang="es-CL">
 
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-        <link rel="shortcut icon" href="{% static 'img/logo/logoInmiigrantes.png' %}"  type="image/x-icon">
-        <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="shortcut icon" href="{% static 'img/logo/logoInmiigrantes.png' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
     <title>Inmigrayuda</title>
 </head>
 
@@ -20,7 +20,7 @@
         <img src="{% static 'img/blur/inmigrantes.jpg' %}" class="blurr" alt="">
         <div class="bg-text">
             <img src="{% static 'img/logo/logoInmiigrantes.png' %}" width="130px" alt="">
-            
+
             <h1>Inmigrayuda</h1>
             <p>"Al servicio de las personas"</p>
         </div>
@@ -34,7 +34,48 @@
         <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
         <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
 
+
+        <ul class="navbar-nav my-2 my-lg-0">
+            {% if user.is_authenticated %}
+            <li class="nav-item">Bienvenido {{usuario}}
+                <a href="{% url "cerrar_session" %}">Cerrar Sesión</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a href="{% url "login" %}">Ingresar</a>
+            </li>
+            {% endif %}
+        </ul>
+
     </div>
+
+    {% if usuario is not None %}
+    <div class="container">
+
+        <form id="formulario" enctype="multipart/form-data" action="" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="exampleInputEmail1">Titulo de la noticia</label>
+                <input type="email" class="form-control" name="correo" id="correo" placeholder="Enter email">
+            </div>
+            <input type="hidden" id="id" name="id" value="">
+            <div class="form-group">
+                <label for="exampleInputPassword1">Cuerpo de la noticia</label>
+                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Adicional</label>
+                <input type="text" class="form-control" name="contrasenia" id="contrasenia" placeholder="Adicional">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Foto</label>
+                <input type="file" class="form-control" name="foto" id="foto" placeholder="Adicional">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    {% endif %}
 
 
     <div class="container-fluid">
@@ -58,25 +99,26 @@
                         <!-- Noticia 1 -->
                         <h2>Inmigrantes ven a los chilenos como individualistas, materialistas, liberales y poco sociables
                         </h2>
-                        <p>Según la encuesta realizada por la U. de Talca, el 59,1% de los extranjeros que viven en Chile
-                            cree que el país es moderno.</p>
+                        <p>Según la encuesta realizada por la U. de Talca, el 59,1% de los extranjeros que viven en Chile cree
+                            que el país es moderno.</p>
 
                         <img class=" img-fluid" src="img/noticias/Nacional/noticia1.jpg" alt="noticia1">
                         <hr>
 
                         <p>La mejor condición económica que Chile tiene con respecto de otros países de Latinoamérica ,entre
                             otros aspectos, ha hecho que miles de ciudadanos extranjeros lleguen al país con mejores expectativas
-                            de vida. <br> El proceso se ha transformado en tema obligado para los chilenos, quienes tienen
-                            diversas opiniones al respecto, pero muy pocos se han detenido a pensar qué piensan los inmigrantes
-                            de Chile y de los chilenos.
+                            de vida.
+                            <br> El proceso se ha transformado en tema obligado para los chilenos, quienes tienen diversas opiniones
+                            al respecto, pero muy pocos se han detenido a pensar qué piensan los inmigrantes de Chile y de
+                            los chilenos.
                         </p>
                         <p>
                             Interrogantes que el Centro Nacional de Estudios Migratorios (Cenem) de la Universidad de Talca buscó responder mediante
                             una encuesta que arrojó sorprendentes resultados.
                         </p>
                         <p>
-                            <b> El 46,4% de los inmigrantes consideran que Chile es un país menos inseguro que sus lugares
-                                de procedencia</b>, mientras que el 59,1% de los encuestados advierte que Chile es más moderno
+                            <b> El 46,4% de los inmigrantes consideran que Chile es un país menos inseguro que sus lugares de
+                                procedencia</b>, mientras que el 59,1% de los encuestados advierte que Chile es más moderno
                             y el 45% advirtió que la comunidad nacional es más democrática.
                         </p>
                         <p>
@@ -89,7 +131,8 @@
                             de vida, mientras que el 84,6% dice mantener costumbres de sus países de origen.
                         </p>
                         <i>
-                            <h6 class="fuenteNoticia">Fuente: <a target="_blank" href="http://www.ahoranoticias.cl/noticias/nacional/238250-inmigrantes-ven-a-los-chilenos-como-individualistas-materialistas-liberales-y-poco-sociables.html">http://www.ahoranoticias.cl</a>
+                            <h6 class="fuenteNoticia">Fuente:
+                                <a target="_blank" href="http://www.ahoranoticias.cl/noticias/nacional/238250-inmigrantes-ven-a-los-chilenos-como-individualistas-materialistas-liberales-y-poco-sociables.html">http://www.ahoranoticias.cl</a>
                                 , 09 de Octubre de 2018</h6>
                         </i>
 
@@ -105,8 +148,8 @@
                         <img class="img-fluid" src="img/noticias/Nacional/poblacionMasGrande.jpg" alt="poblacionMasGrande">
 
                         <hr>
-                        <p>Los venezolanos en Chile se han convertido por primera vez en la comunidad de inmigrantes más
-                            grande del país, superando a la peruana, con un total de 187.892.
+                        <p>Los venezolanos en Chile se han convertido por primera vez en la comunidad de inmigrantes más grande
+                            del país, superando a la peruana, con un total de 187.892.
                         </p>
                         <p>
                             Según números de la Encuesta de Caracterización Económica y Social (Casen) 2017, según calculó La Tercera, el total de personas
@@ -114,7 +157,8 @@
                             mitad llegó a partir de 2015, marcando un alza de 67%.</p>
 
                         <i>
-                            <h6 class="fuenteNoticia">Fuente: <a target="_blank" href="http://www.ahoranoticias.cl/noticias/nacional/237427-venezolanos-se-convierten-en-la-comunidad-de-inmigrantes-mas-grande-de-chile.html">http://www.ahoranoticias.cl</a>
+                            <h6 class="fuenteNoticia">Fuente:
+                                <a target="_blank" href="http://www.ahoranoticias.cl/noticias/nacional/237427-venezolanos-se-convierten-en-la-comunidad-de-inmigrantes-mas-grande-de-chile.html">http://www.ahoranoticias.cl</a>
                                 , 01 de Octubre de 2018</h6>
                         </i>
 
@@ -125,7 +169,8 @@
                         <i>
                             <br>
                             <h2>Más de 13,500 inmigrantes podrían ser deportados tras investigación de USCIS</h2>
-                            <h6 class="fuenteNoticia">Fuente: <a target="_blank" href="https://laopinion.com/2018/10/09/mas-de-13500-inmigrantes-podrian-ser-deportados-tras-investigacion-de-uscis/">https://laopinion.com</a>
+                            <h6 class="fuenteNoticia">Fuente:
+                                <a target="_blank" href="https://laopinion.com/2018/10/09/mas-de-13500-inmigrantes-podrian-ser-deportados-tras-investigacion-de-uscis/">https://laopinion.com</a>
                                 , 09 de Octubre de 2018</h6>
                         </i>
                     </div>
@@ -142,8 +187,8 @@
 
         <div class="footer footer-copyright text-center py-3 ">
             <h6> © 2018 Copyright:
-                    <a href="../"> Inmigrayuda.cl </a>
-                </h6>
+                <a href="../"> Inmigrayuda.cl </a>
+            </h6>
         </div>
 
     </footer>
@@ -156,7 +201,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        <script src="{% static 'js/app' %}"></script>
+    <script src="{% static 'js/app' %}"></script>
 </body>
 
 </html>
