--- a/inmigrayuda/templates/index.html
+++ b/inmigrayuda/templates/index.html
@@ -34,7 +34,47 @@
         <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
         <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
 
+        <ul class="navbar-nav my-2 my-lg-0">
+                {% if user.is_authenticated %}
+                <li class="nav-item">Bienvenido {{usuario}}
+                    <a href="{% url "cerrar_session" %}">Cerrar Sesión</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url "login" %}">Ingresar</a>
+                </li>
+                {% endif %}
+            </ul>
+
     </div>
+
+    {% if usuario is not None %}
+    <div class="container">
+
+        <form id="formulario" enctype="multipart/form-data" action="" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="exampleInputEmail1">Titulo de la noticia</label>
+                <input type="email" class="form-control" name="correo" id="correo" placeholder="Enter email">
+            </div>
+            <input type="hidden" id="id" name="id" value="">
+            <div class="form-group">
+                <label for="exampleInputPassword1">Cuerpo de la noticia</label>
+                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Adicional</label>
+                <input type="text" class="form-control" name="contrasenia" id="contrasenia" placeholder="Adicional">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Foto</label>
+                <input type="file" class="form-control" name="foto" id="foto" placeholder="Adicional">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    {% endif %}
 
 
     <div class="container-fluid">
